syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.common";
option java_multiple_files = true;

package common;

message Vector2 {
  double x = 1;
  double y = 2;
};