syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.requests";
option java_multiple_files = true;

package request_models;

import "requests/player-coordinates-request.proto";

message TowerAttackRequest {
  int32 towerId = 1;
  request_models.PlayerCoordinatesRequest playerCoordinates = 2;
};
